Fixed map centering on smaller devices

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -3,12 +3,14 @@
 
 .svgMap-map-wrapper {
   position: relative;
-  width: 100%;
-  padding-top: 50%;
+  width: 65%;
+  padding-top: 30%;
   overflow: hidden;
   background: #434c5e;
   color: #111;
   border-radius: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .svgMap-map-wrapper * {
