--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,3 @@ footer a {
   color: #a3be8c;
 }
 
-#svgMap {
-  border-radius: 100px;
-  width: 65%;
-  margin-left: auto;
-  margin-right: auto;
-}
